--- a/index.html
+++ b/index.html
@@ -1498,16 +1498,16 @@
                                 </div>
                             </div>
                             <div class="chat-bubble user-bubble">
-                                <span class="bubble-text">Boşanma davası açacağım, çocuk velayeti nasıl olur?</span>
+                                <span class="bubble-text">İş hukuku konusunda danışmanlık istiyorum</span>
                             </div>
                             <div class="chat-bubble ai-bubble">
-                                <span class="bubble-text">Çocuğun yüksek yararı önceliklidir. Anne-baba ortak velayeti yaygındır ⚖️</span>
+                                <span class="bubble-text">Tabii! Hangi konuda yardıma ihtiyacınız var? ⚖️</span>
                             </div>
                             <div class="chat-bubble user-bubble">
-                                <span class="bubble-text">Hangi belgeler gerekli ve süreç ne kadar sürer?</span>
+                                <span class="bubble-text">İşten çıkarılma süreci</span>
                             </div>
                             <div class="chat-bubble ai-bubble">
-                                <span class="bubble-text">Evlilik cüzdanı, gelir belgesi ve ikametgah gerekli. Süreç 6-12 ay arası 📋</span>
+                                <span class="bubble-text">📋 Dosyanızı inceleyip avukatımızla görüşmenizi ayarlayacağım</span>
                             </div>
                             <div class="legal-appointment">
                                 <span>📅 Avukat görüşmesi: Pazartesi 10:00</span>
