--- a/sunum.html
+++ b/sunum.html
@@ -609,7 +609,7 @@
             </div>
 
             <div class="big-number">168M ₺</div>
-            <p><strong>3. yıl hedef cirömız</strong></p>
+            <p><strong>3. yıl hedef ciromuz</strong></p>
             
             <div class="highlight-box">
                 <p>🎯 Türkiye'nin lider AI platformu olacağız!</p>
