--- a/sesliasistan.html
+++ b/sesliasistan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N8N Sesli Asistan</title>
+    <title>Sesli Asistan</title>
     <style>
         * {
             margin: 0;
