--- a/saglikasistan.html
+++ b/saglikasistan.html
@@ -311,7 +311,7 @@
     <script>
         class HealthConsultant {
             constructor() {
-                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook/saglik';
+                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook-test/saglik';
                 this.chatHistory = document.getElementById('chatHistory');
                 this.messageInput = document.getElementById('messageInput');
                 this.sendBtn = document.getElementById('sendBtn');
