--- a/hizmetler.html
+++ b/hizmetler.html
@@ -407,7 +407,7 @@
                 <h3>🔧 Teknoloji Altyapısı</h3>
                 <div class="tech-stack">
                     <span class="tech-item">OpenAI GPT-4</span>
-                    <span class="tech-item">N8N Automation</span>
+                    <span class="tech-item">AI Agent</span>
                     <span class="tech-item">Speech-to-Text</span>
                     <span class="tech-item">Text-to-Speech</span>
                     <span class="tech-item">Real-time Data</span>
