--- a/hizmetler.html
+++ b/hizmetler.html
@@ -325,7 +325,7 @@
                 <div class="service-icon">🎤</div>
                 <h2 class="service-title">Sesli Asistan</h2>
                 <p class="service-description">
-                    OpenAI teknolojisi ile sesli sohbet deneyimi. Konuşarak sorularınızı sorun, sesli yanıtlar alın.
+                   AI teknolojisi ile sesli sohbet deneyimi. Konuşarak sorularınızı sorun, sesli yanıtlar alın.
                 </p>
                 <ul class="service-features">
                     <li>Ses kaydetme ve çalma</li>
@@ -406,7 +406,7 @@
             <div class="tech-info">
                 <h3>🔧 Teknoloji Altyapısı</h3>
                 <div class="tech-stack">
-                    <span class="tech-item">OpenAI GPT-4</span>
+                    <span class="tech-item">AI</span>
                     <span class="tech-item">AI Agent</span>
                     <span class="tech-item">Speech-to-Text</span>
                     <span class="tech-item">Text-to-Speech</span>
