--- a/hizmetler.html
+++ b/hizmetler.html
@@ -443,11 +443,11 @@
         // Hizmet sayfalarına yönlendirme
         function openService(serviceType) {
             const services = {
-                'voice': 'voice_message.html',
-                'health': 'health_consultant.html', 
-                'legal': 'legal_consultant.html',
-                'restaurant': 'restaurant_order.html',
-                'realestate': 'real_estate_consultant.html'
+                'voice': 'sesliasistan.html',
+                'health': 'saglikasistan.html', 
+                'legal': 'avukatasistan.html',
+                'restaurant': 'restoran.html',
+                'realestate': 'emlak.html'
             };
 
             const servicePage = services[serviceType];
