--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
     <header>
         <nav class="container">
             <div class="logo">AI Agent Pro</div>
-            <a href="#skool" class="cta-button" style="padding: 10px 25px; font-size: 0.9rem;">Skool'a Katıl</a>
+            <a href="#skool" class="cta-button" style="padding: 10px 25px; font-size: 0.9rem;">AI Hizmetler Portalı</a>
         </nav>
     </header>
 
@@ -1294,7 +1294,7 @@
                 </div>
             </div>
             
-            <a href="#skool" class="cta-button">Hemen Başla - Skool Topluluğuna Katıl</a>
+            <a href="#skool" class="cta-button">AI Hizmetler Portalı</a>
         </div>
     </section>
 
