--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 
                 <div class="demo-visual">
                     <div class="demo-content">
-                        <h4>🤖 Canlı AI Agent Demosi</h4>
+                        <h4>🤖 Canlı AI Agent Demosu</h4>
                         <p style="font-size: 0.9rem; opacity: 0.8; margin-bottom: 1rem;">
                             Aşağıda gerçek bir AI agent konuşması görüyorsunuz:
                         </p>
