--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
     <section class="templates-preview">
         <div class="container">
             <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;">Hazır Template'ler</h2>
-            <p style="text-align: center; font-size: 1.1rem; color: #666; margin-bottom: 3rem;">Sektörünüze özel hazır AI agent animasyonları ile hemen başlayın!</p>
+            <p style="text-align: center; font-size: 1.1rem; color: #666; margin-bottom: 3rem;">Sektörünüze özel hazır AI agent  ile hemen başlayın!</p>
             
             <div class="template-grid">
                 <div class="template-card">
