--- a/hizmetler.html
+++ b/hizmetler.html
@@ -121,6 +121,10 @@
             --card-gradient: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             --card-border: #1e3c72;
         }
+        .service-card.insurance {
+            --card-gradient: linear-gradient(135deg, #0f4c75 0%, #3282b8 100%);
+            --card-border: #0f4c75;
+        }
 
         .service-icon {
             font-size: 4em;
