--- a/sigorta.html
+++ b/sigorta.html
@@ -506,7 +506,7 @@
     <script>
         class InsuranceConsultant {
             constructor() {
-                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook/sigorta';
+                this.webhookUrl = 'https://d3glwm2g.rpcl.dev/webhook/sigorta';
                 this.chatHistory = document.getElementById('chatHistory');
                 this.messageInput = document.getElementById('messageInput');
                 this.sendBtn = document.getElementById('sendBtn');
