--- a/sesliasistan.html
+++ b/sesliasistan.html
@@ -177,7 +177,7 @@
         <div class="settings">
             <h3>Webhook Ayarları</h3>
             <input type="text" id="webhookUrl" class="webhook-url" 
-                   value="https://wasakem.app.n8n.cloud/webhook/voice_message" 
+                   value="https://d3glwm2g.rpcl.dev/webhook/voice_message" 
                    readonly
         </div>
 
@@ -202,7 +202,7 @@
                 this.recordText = document.getElementById('recordText');
                 this.status = document.getElementById('status');
                 this.chatHistory = document.getElementById('chatHistory');
-                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook/voice_message';
+                this.webhookUrl = 'https://d3glwm2g.rpcl.dev/webhook/voice_message';
                 
                 this.init();
             }
