--- a/emlak.html
+++ b/emlak.html
@@ -505,7 +505,7 @@
     <script>
         class RealEstateConsultant {
             constructor() {
-                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook/emlak';
+                this.webhookUrl = 'https://wasakem.app.n8n.cloud/webhook/mesajasistan';
                 this.chatHistory = document.getElementById('chatHistory');
                 this.messageInput = document.getElementById('messageInput');
                 this.sendBtn = document.getElementById('sendBtn');
